# jacobi-svd-evd

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CPPLINT.cfg  LICENSE.md  README.md  build.sh
autotuning/evd/: gen_evd_block_vectorized.py  replace_unrolling.py  try_params.py
autotuning/svd/: gen_subprocedure_vectorized.py  gen_subprocedure_vectorized_rowwise.py  gen_subprocedure_vectorized_with_transpose.py  main.py  replace_unrolling.py  try_params.py
perf/: CMakeLists.txt
perf/evd/: CMakeLists.txt
perf/evd/classic/: CMakeLists.txt  evd_classic_perf.cpp  evd_perf.cpp  evd_perf_test.cpp
perf/evd/cyclic/: CMakeLists.txt  base_evd.cpp  blocked_evd.cpp  blocked_evd_less_copy.cpp  blocked_vectorized_evd.cpp  blocked_vectorized_evd_less_copy.cpp  evd_cyclic_perf.cpp  evd_cyclic_vectorize_perf.cpp  oneloop_evd.cpp  oneloop_vectorized_evd.cpp  outer_unroll_evd.cpp  outer_unroll_vectorized_evd.cpp  vectorized_evd.cpp
perf/evd/eigen/: CMakeLists.txt  evd_perf.cpp
perf/libs/: CMakeLists.txt  perf_test.hpp  tsc_x86.h
perf/resources/evd/: 1024x1024.txt  128x128.txt  16x16.txt  2048x2048.txt  256x256.txt  32x32.txt  4096x4096.txt  512x512.txt  64x64.txt  8192x8192.txt  8x8.txt
perf/resources/evd-alt/: 1000x1000.txt  2000x2000.txt  4000x4000.txt
perf/resources/svd/: 1024x1024.txt  128x128.txt  16x16.txt  2048x2048.txt  256x256.txt  32x32.txt  4096x4096.txt  512x512.txt  64x64.txt  8192x8192.txt  8x8.txt
perf/resources/svd-alt/: 1000x1000.txt  2000x2000.txt  4000x4000.txt
perf/svd/: CMakeLists.txt
perf/svd/eigen/: CMakeLists.txt  svd_perf.cpp
perf/svd/one-sided/: CMakeLists.txt  svd_perf.cpp
perf/svd/two-sided/: CMakeLists.txt  base.cpp  blocked.cpp  blocked_less_copy.cpp  blocked_less_copy_transposed.cpp  svd.cpp  svd_blocked.cpp  svd_blocked_less_copy.cpp  svd_blocked_less_copy_transposed.cpp  svd_perf.cpp
results/: input_sizes
results/evd/: base  base-vectorized  blocked-vectorized  blocked-vectorized-less-data  blocked-vectorized-less-data-opt-mult  eigen  evd-base  evd-blocked  evd-blocked-vectorized  evd-unroll-inner  evd-unroll-outer  evd-vec  evd_cyclic_perf  evd_cyclic_perf_org  evd_cyclic_vectorize_perf
results/roofline-plots/: plot_roofline.py
results/svd/: base  base-vectorized  blocked-vectorized  blocked-vectorized-less-data  blocked-vectorized-less-data-opt-mult  eigen  eigen_svd_perf  svd-base  svd-base-no-vec  svd-blocked  svd-blocked-16  svd-blocked-8  svd-blocked-8-no-vec  svd-blocked-less-copy  svd-blocked-less-copy-transposed  svd-eigen  svd-eigen-no-vec
scripts/: benchmark.sh  benchmark_mode.sh  build.sh  disable_cpu_turboboost.sh  enable_cpu_turboboost.sh  evd_benchmark_data.py  evd_testdata.py  format.sh  lint.sh  plot_perf.py  plot_roofline.py  pre-commit.hook  svd_benchmark_data.py  svd_testdata.py  test.sh
src/: CMakeLists.txt  evd.cpp  evd.hpp  main.cpp  main_old.cpp  svd.cpp  svd.hpp  types.hpp  util.cpp  util.hpp
src/evd/: CMakeLists.txt
src/evd/classic/: CMakeLists.txt  evd.cpp  evd.hpp  evd_classic.cpp  evd_classic.hpp
src/evd/cyclic/: CMakeLists.txt  evd_cost.cpp  evd_cost.hpp  evd_cyclic.cpp  evd_cyclic.hpp  evd_cyclic_blocked.cpp  evd_cyclic_blocked_unroll_outer.cpp  evd_cyclic_blocked_vectorize.cpp  evd_cyclic_oneloop.cpp  evd_cyclic_oneloop_row.cpp  evd_cyclic_oneloop_vectorize.cpp  evd_cyclic_unroll.cpp  evd_cyclic_unroll_inner.cpp  evd_cyclic_unroll_outer.cpp  evd_cyclic_unroll_outer_vectorize.cpp  evd_cyclic_unroll_vectorize.cpp  evd_cyclic_vectorize.cpp  nevd.cpp  nevd.hpp
src/prettyprint/: prettyprint.hpp
src/svd/: CMakeLists.txt
src/svd/one-sided/: CMakeLists.txt  svd.cpp  svd.hpp
src/svd/two-sided/: CMakeLists.txt  cost.cpp  cost.hpp  nsvd.cpp  nsvd.hpp  svd.cpp  svd.hpp  svd_blocked.cpp  svd_blocked_less_copy.cpp  svd_blocked_less_copy_transposed.cpp  svd_subprocedure.cpp  svd_subprocedure.hpp  svd_subprocedure_vectorized.cpp  svd_subprocedure_vectorized_rowwise.cpp  svd_subprocedure_vectorized_with_transpose.cpp
src/utils/: CMakeLists.txt  block.cpp  block.hpp  debug.cpp  debug.hpp  matrix.cpp  matrix.hpp  matrix_naive.cpp  types.hpp  util.cpp  util.hpp
src/utils/boost-cmake/: CMakeLists.txt
test/: CMakeLists.txt  README.md  dummy_test.cpp  evd_test.cpp  evd_tol_test.cpp  svd_test.cpp  test_utils.cpp  test_utils.hpp  util_test.cpp
test/evd/: CMakeLists.txt
test/evd/classic/: CMakeLists.txt  evd_classic_test.cpp  evd_classic_tol_test.cpp  evd_cyclic_test.cpp  evd_cyclic_tol_test.cpp  evd_test.cpp  evd_tol_test.cpp
test/evd/cyclic/: CMakeLists.txt  evd_cyclic_blocked_test.cpp  evd_cyclic_oneloop_row_test.cpp  evd_cyclic_oneloop_test.cpp  evd_cyclic_oneloop_vectorize_test.cpp  evd_cyclic_test.cpp  evd_cyclic_tol_test.cpp  evd_cyclic_unroll_outer_vectorize_test.cpp  evd_cyclic_unroll_test.cpp  evd_cyclic_vectorize_test.cpp
test/svd/: CMakeLists.txt
test/svd/one-sided/: CMakeLists.txt  svd_test.cpp
test/svd/two-sided/: CMakeLists.txt  svd_blocked_less_copy_test.cpp  svd_blocked_less_copy_transposed_test.cpp  svd_blocked_test.cpp  svd_test.cpp
test/testdata/: eigenvalues.txt  eigenvectors.txt  evd_testdata.py  evdmatrix.txt  singularvalues.txt  svd_testdata.py  svdmatrix.txt  usingularvector.txt  vsingularvector.txt
test/utils/: CMakeLists.txt  util_test.cpp
